# deep-agent-service

./: .dockerignore  .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
docs/: c4_component_diagram.md  class_diagram.md  erd.md  prd.md  sequence_diagram.md  state_diagram.md
src/app/: config.py  logging_config.py  main.py
src/app/api/: models.py  routes.py
src/app/models/: state.py
src/app/prompts/: prompts.py
src/app/services/: agent_service.py
src/app/tools/: file_tools.py  research_tools.py  task_tool.py  todo_tools.py
