[tool.poetry]
name = "deep-agent-service"
version = "0.1.0"
description = "A FastAPI service for the Deep Agent research agent."
authors = [
    "zhuwj <byzhubaiyuan@gmail.com>"
]
readme = "README.md"
packages = [{include = "app", from = "src"}]

[tool.poetry.dependencies]
python = "~3.11"
fastapi = "0.111.1"
uvicorn = {extras = ["standard"], version = "0.30.3"}
langchain = "0.3.27"
langgraph = "0.6.7"
langchain-anthropic = "0.3.19"
langchain-openai = "0.3.32"
python-dotenv = "1.1.1"
pydantic = "2.11.7"
pydantic-settings = "2.10.1"
tavily-python = "0.7.11"
httpx = "0.28.1"
markdownify = "1.2.0"
langsmith = "0.4.27"
anthropic = "0.66.0"
python-json-logger = "^3.3.0"

[tool.poetry.group.dev.dependencies]
ruff = "0.12.12"
mypy = "1.17.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
